--- a/Bus_website.css
+++ b/Bus_website.css
@@ -57,7 +57,7 @@ heading {
   color:rgba(233,225,0,1.00);
   text-shadow: 3px 3px 8px #000000;
   /*Go to Top Button */
-  position: fixed;
+  position:static;
   bottom: 20px;
   right: 30px;
   z-index: 99;
