--- a/Bus_website.css
+++ b/Bus_website.css
@@ -1,81 +1,83 @@
 body {
-	background-color:#1e345d;
-  background-image:url(https://www.metrotas.com.au/wp-content/uploads/2019/01/Metro-Tasmania-30-e1570504101350-640x400.jpg);
-  margin: 15px;
+  background-color: #1e345d;
   background-repeat: no-repeat;
   color: white;
-    background-repeat: no-repeat;
+  background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: right; ;
-  background-size:700px;
-	/* Loading screen from now on */
-	
-	
-	
+  background-position: center;
+  background-size: 700px;
+  text-align: center;
+  /* Loading screen from now on */
 }
-
-
-.overlay { 
-   position: fixed; 
-   overflow-y: scroll;
-   top: 0; right: 0; bottom: 0; left: 0; }
-
-[aria-hidden="true"]  { display: none; }
-[aria-hidden="false"] { display: block; }
+img {
+  width: 900px
+}
+.overlay {
+  position: fixed;
+  overflow-y: scroll;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+[aria-hidden="true"] {
+  display: none;
+}
+[aria-hidden="false"] {
+  display: block;
+}
 h1 {
   width: 625px;
   line-height: 1.2;
-  text-align: left;
-  margin-left: left;
-  margin-right: left;
+  text-align: center;
+  margin-left: center;
+  margin-right: center;
+  margin-bottom: center;
+  margin: top;
   font-size: 2em;
   font-family: trajan-pro-3, serif;
   font-weight: 600;
+  ;
   font-style: normal;
-  Color:#a2863d;
+  Color: #a2863d;
   text-shadow: 3px 3px 8px #000000;
-	
 }
 span {
-  color:#a2863d;
+  color: #a2863d;
   font-size: 50px;
-  text-align: left;
-  margin-left: left;
-  margin-right: left;
+  text-align: center;
+  margin-left: center;
+  margin-right: center;
 }
 h2 {
   width: 702px;
   color: rgb(134, 103, 49);
   background-color: rgb(236, 204, 156);
-  text-align: left;
-  margin-left: left;
-  margin-right: left;
+  text-align: center;
+  margin-left: center;
+  margin-right: center;
 }
 h3 {
   width: 620px;
-  color:#89a9e2;
-  text-align: left;
-  margin-left: left;
-  margin-right: left;
+  color: #89a9e2;
+  text-align: center;
+  margin-left: center;
+  margin-right: center;
 }
 p {
-  text-align: left;
-  margin-left: left;
-  margin-right: left;
-  color:white;
-font-family: Atexbode Garamond Pro, serif;
+  text-align: center;
+  margin-left: center;
+  margin-right: center;
+  color: white;
+  font-family: Atexbode Garamond Pro, serif;
   /*Make smaller and add links to the website*/
 }
 last {
-	
-	color: white;
-	font-size: 11px;
- 	text-align:center;
-	display: block; 
-	margin: auto;
-	
-
-
+  color: white;
+  font-size: 11px;
+  text-align: center;
+  display: block;
+  margin: auto;
 }
 button {
   font-family: trajan-pro-3, serif;
@@ -83,49 +85,40 @@ button {
   font-style: normal;
   color:#8b1c40;
   /*Go to Top Button */
-  position:static;
+  position: static;
   bottom: 20px;
   right: 30px;
   z-index: 99;
   font-size: 18px;
   border: none;
   outline: none;
-  background-color:#89a9e2;
+  background-color: #89a9e2;
   cursor: pointer;
   padding: 15px;
   border-radius: 4px;
 }
-
-
-.background-content{
-    height: 100%;
-    overflow: auto;
+.background-content {
+  height: 100%;
+  overflow: auto;
 }
 lowbutton {
-    position: fixed;
-    bottom: 10px;
-    float: right;
-    right: 20.5%;
-    left: 77.25%;
-    max-width: 90px;
-    width: 100%;
-    font-size: 12px;
-    border-color: rgba(5, 82, 248);
-     background-color:#89a9e2;
-	padding: .5px;
-    border-radius: 4px;
-     font-family: trajan-pro-3, serif;
-	  cursor: pointer;
-	 border: none;
+  position: fixed;
+  bottom: 10px;
+  float: right;
+  right: 20.5%;
+  left: 77.25%;
+  max-width: 90px;
+  width: 100%;
+  font-size: 12px;
+  border-color: rgba(5, 82, 248);
+  background-color: #89a9e2;
+  padding: .5px;
+  border-radius: 4px;
+  font-family: trajan-pro-3, serif;
+  cursor: pointer;
+  border: none;
   outline: none;
-	color:#8b1c40;
+  color: #8b1c40;
   text-shadow: 3px 3px 8px #000000;
-	
-
-
 }
-
-
-
-
 /*line
