--- a/Bus_website.css
+++ b/Bus_website.css
@@ -1,3 +1,4 @@
+@import url("Bus_website.js.css");
 body {
   background-color: #1e345d;
   background-repeat: no-repeat;
@@ -39,10 +40,11 @@ h1 {
   font-style: normal;
   Color: #a2863d;
   text-shadow: 3px 3px 8px #000000;
+	font-size: 65px;
 }
 span {
   color: #a2863d;
-  font-size: 50px;
+  font-size: 70px;
   text-align: center;
   margin-left: center;
   margin-right: center;
@@ -61,6 +63,7 @@ h3 {
   text-align: center;
   margin-left: center;
   margin-right: center;
+	font-size: 60px
 }
 p {
   text-align: center;
@@ -68,11 +71,12 @@ p {
   margin-right: center;
   color: white;
   font-family: Atexbode Garamond Pro, serif;
+	font-size: 40px;
   /*Make smaller and add links to the website*/
 }
 last {
   color: white;
-  font-size: 11px;
+  font-size: 20px;
   text-align: center;
   display: block;
   margin: auto;
@@ -87,7 +91,7 @@ button {
   bottom: 20px;
   right: 30px;
   z-index: 99;
-  font-size: 18px;
+  font-size: 40px;
   border: none;
   outline: none;
   background-color: #89a9e2;
@@ -107,7 +111,7 @@ lowbutton {
   left: 77.25%;
   max-width: 90px;
   width: 100%;
-  font-size: 12px;
+  font-size: 25px;
   border-color: rgba(5, 82, 248);
   background-color: #89a9e2;
   padding: .5px;
@@ -118,5 +122,99 @@ lowbutton {
   outline: none;
   color: #8b1c40;
   text-shadow: 3px 3px 8px #000000;
+}
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
 }
 /*line
