--- a/Bus_website.css
+++ b/Bus_website.css
@@ -227,6 +227,29 @@ lowbutton {
   from {opacity: .4}
   to {opacity: 1}
 }
+pdfbutton {
+ position:fixed;
+  bottom: 10px;
+  float: right;
+  right: 20.5%;
+  left: 77.25%;
+  max-width: 90px;
+  width: 100%;
+  font-size: 25px;
+  border-color: rgba(5, 82, 248);
+  background-color: #89a9e2;
+  padding: .5px;
+  border-radius: 4px;
+  font-family: trajan-pro-3, serif;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  color: #8b1c40;
+  text-shadow: 3px 3px 8px #000000;
+}
+
+}
+
 credit { 
   color: gold;
   font-size: 1em;
